[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-audit"
version = "0.1.0"
description = "CLI tool to audit LLM endpoints against OWASP LLM Top 10"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer[all]>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "anyio>=4.3.0",
]

[project.scripts]
llm-audit = "llm_audit.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["llm_audit"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
