[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-audit"
version = "0.1.0"
description = "Automated security testing for LLM endpoints — OWASP Top 10 vulnerability scanner with CI/CD integration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "llm", "security", "audit", "owasp", "prompt-injection",
    "jailbreak", "red-teaming", "ai-safety", "penetration-testing",
    "vulnerability-scanner", "chatgpt", "openai", "ollama",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "typer[all]>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "anyio>=4.3.0",
]

[project.scripts]
llm-audit = "llm_audit.cli:app"

[project.urls]
Homepage = "https://github.com/51p50x/llm-audit"
Repository = "https://github.com/51p50x/llm-audit"
Issues = "https://github.com/51p50x/llm-audit/issues"
"Ko-fi" = "https://ko-fi.com/51p50x40822"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["llm_audit"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
